--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
 
 % Standard Packages
 \usepackage[utf8]{inputenc}
+\usepackage{svg}
 % \usepackage[german]{babel} % deutsch.
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
@@ -209,6 +210,8 @@ style=apa,
 \usepackage{mdframed}
 
 \newcommand{\bgInfo}[1]{\begin{mdframed}[backgroundcolor=black!10,rightline=false,leftline=false] #1 \end{mdframed}}
+
+\newcommand{\praxis}[1]{\begin{mdframed}[backgroundcolor=black!10,rightline=false,leftline=false] #1 \end{mdframed}}
 
 \newcommand{\video}[1]{
 \begin{framed}
