--- a/references.bib
+++ b/references.bib
@@ -10,3 +10,9 @@
   year={2017},
   publisher={Springer}
 }
+@book{zolzer2002dafx,
+  title={DAFX-Digital audio effects},
+  author={Z{\"o}lzer, Udo and Amatriain, Xavier and Arfib, Daniel and Bonada, Jordi and De Poli, Giovanni and Dutilleux, Pierre and Evangelista, Gianpaolo and Keiler, Florian and Loscos, Alex and Rocchesso, Davide and others},
+  year={2002},
+  publisher={John Wiley \& Sons}
+}
